--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
             <tr>
                 <td>
                     <a target="_blank" href="https://github.com/Priyabrata-Naik">
-                        <img width="300" src="images/myProfile.jpg" alt="Priyabrata Naik's Photo">
+                        <img width="300" src="image/myProfile.jpg"
+                            alt="Priyabrata Naik's Resume">
                     </a>
                 </td>
                 <td>
