image source updated

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
             <tr>
                 <td>
                     <a target="_blank" href="https://github.com/Priyabrata-Naik">
-                        <img width="300" src="image/myProfile.jpg"
+                        <img width="300"
+                            src="https://res.cloudinary.com/dvg1ly078/image/upload/v1736134840/xnazkomsv96r5fpxfvxb.jpg"
                             alt="Priyabrata Naik's Resume">
                     </a>
                 </td>
